// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package store;

// The Store defines all store interfaces
service Store {
  // Sends a write request to server
  rpc Write (WriteRequest) returns (WriteReply) {}
  rpc Read (ReadRequest) returns (ReadReply) {}
  rpc Remove (RemoveRequest) returns (RemoveReply) {}
}

message WriteRequest {
  bytes PGID = 1;    // value of the object
  bytes Oid = 2;      // for object id
  bytes Value = 3;    // value of the object
  uint64 Length = 4;
  uint64 Offset = 5;
}

// The response message contains the return code of this write operation
message WriteReply {
  int32 RetCode = 1;
}

message ReadRequest {
  bytes PGID = 1;    // value of the object
  bytes Oid = 2;      // for object id
  uint64 Length = 3;
  uint64 Offset = 4;
}

message ReadReply {
  bytes ReadBuf = 1;      
  int32 RetCode = 2;
}

message RemoveRequest {
  bytes PGID = 1;    // value of the object
  bytes Oid = 2;      // for object id
}

message RemoveReply {
  int32 RetCode = 1;
}
